tests/backend/gateway-api.yaml
apiVersion: devopstoolkit.live/v1beta1
kind: App
metadata:
  name: backend
spec:
  routing: gateway-api
