tests/backend/scaling-gateway-api.yaml
apiVersion: devopstoolkit.live/v1beta1
kind: App
metadata:
  name: backend
spec:
  routing: gateway-api
  minReplicas: 3
  maxReplicas: 8
  scaling:
    enabled: true
