tests/backend/assert-gateway-api.yaml
---
apiVersion: devopstoolkit.live/v1beta1
kind: App
metadata:
  name: backend
spec:
  routing: gateway-api
  crossplane:
    resourceRefs:
    - apiVersion: apps/v1
      kind: Deployment
      name: backend
    - apiVersion: gateway.networking.k8s.io/v1
      kind: HTTPRoute
      name: backend
    - apiVersion: v1
      kind: Service
      name: backend
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
  labels:
    app.kubernetes.io/name: backend
spec:
  parentRefs:
  - name: contour
  hostnames:
  - silly-demo.54.204.223.4.nip.io
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: backend
      port: 8080
