tests/backend/assert-install.yaml
---
apiVersion: devopstoolkit.live/v1alpha1
kind: AppClaim
metadata:
  name: silly-demo
spec:
  compositionRef:
    name: app-backend
  compositionSelector:
    matchLabels:
      location: local
      type: backend
  id: backend
  parameters:
    host: silly-demo.54.204.223.4.nip.io
    image: ghcr.io/vfarcic/silly-demo
    tag: "1.4.113"
    kubernetesProviderConfigName: default
    namespace: ($namespace)
    port: 8080
  resourceRef:
    apiVersion: devopstoolkit.live/v1alpha1
    kind: App
---
apiVersion: devopstoolkit.live/v1alpha1
kind: App
metadata:
  labels:
    crossplane.io/claim-name: silly-demo
    crossplane.io/claim-namespace: ($namespace)
spec:
  claimRef:
    apiVersion: devopstoolkit.live/v1alpha1
    kind: AppClaim
    name: silly-demo
    namespace: ($namespace)
  compositionRef:
    name: app-backend
  compositionSelector:
    matchLabels:
      location: local
      type: backend
  id: backend
  parameters:
    host: silly-demo.54.204.223.4.nip.io
    image: ghcr.io/vfarcic/silly-demo
    tag: "1.4.113"
    kubernetesProviderConfigName: default
    namespace: ($namespace)
    port: 8080
  resourceRefs:
  - apiVersion: kubernetes.crossplane.io/v1alpha1
    kind: ProviderConfig
    name: backend-app
  - apiVersion: kubernetes.crossplane.io/v1alpha2
    kind: Object
    name: backend-deployment
  - apiVersion: kubernetes.crossplane.io/v1alpha2
    kind: Object
    name: backend-ingress
  - apiVersion: kubernetes.crossplane.io/v1alpha2
    kind: Object
    name: backend-service
---
apiVersion: kubernetes.crossplane.io/v1alpha2
kind: Object
metadata:
  annotations:
    crossplane.io/composition-resource-name: backend-deployment
    crossplane.io/external-name: backend-deployment
  labels:
    crossplane.io/claim-name: silly-demo
    crossplane.io/claim-namespace: ($namespace)
  name: backend-deployment
spec:
  forProvider:
    manifest:
      apiVersion: apps/v1
      kind: Deployment
      metadata:
        labels:
          app.kubernetes.io/name: silly-demo
        name: silly-demo
        namespace: ($namespace)
      spec:
        selector:
          matchLabels:
            app.kubernetes.io/name: silly-demo
        template:
          metadata:
            labels:
              app.kubernetes.io/name: silly-demo
          spec:
            containers:
            - image: ghcr.io/vfarcic/silly-demo:1.4.113
              livenessProbe:
                httpGet:
                  path: /
                  port: 8080
              name: silly-demo
              ports:
              - containerPort: 8080
              readinessProbe:
                httpGet:
                  path: /
                  port: 8080
              resources:
                limits:
                  cpu: 250m
                  memory: 256Mi
                requests:
                  cpu: 125m
                  memory: 128Mi
  providerConfigRef:
    name: backend-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: silly-demo
  name: silly-demo
  namespace: ($namespace)
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: silly-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: silly-demo
    spec:
      containers:
      - image: ghcr.io/vfarcic/silly-demo:1.4.113
        livenessProbe:
          httpGet:
            path: /
            port: 8080
        name: silly-demo
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
        resources:
          limits:
            cpu: 250m
            memory: 256Mi
          requests:
            cpu: 125m
            memory: 128Mi
---
apiVersion: kubernetes.crossplane.io/v1alpha2
kind: Object
metadata:
  annotations:
    crossplane.io/composition-resource-name: backend-ingress
    crossplane.io/external-name: backend-ingress
  labels:
    crossplane.io/claim-name: silly-demo
    crossplane.io/claim-namespace: ($namespace)
  name: backend-ingress
spec:
  forProvider:
    manifest:
      apiVersion: networking.k8s.io/v1
      kind: Ingress
      metadata:
        annotations:
          ingress.kubernetes.io/ssl-redirect: "false"
          dev.okteto.com/generate-host: "true"
        labels:
          app.kubernetes.io/name: silly-demo
        name: silly-demo
        namespace: ($namespace)
      spec:
        ingressClassName: traefik
        rules:
        - host: silly-demo.54.204.223.4.nip.io
          http:
            paths:
            - backend:
                service:
                  name: silly-demo
                  port:
                    number: 8080
              path: /
              pathType: ImplementationSpecific
  providerConfigRef:
    name: backend-app
---
apiVersion: kubernetes.crossplane.io/v1alpha2
kind: Object
metadata:
  annotations:
    crossplane.io/composition-resource-name: backend-service
    crossplane.io/external-name: backend-service
  labels:
    crossplane.io/claim-name: silly-demo
    crossplane.io/claim-namespace: ($namespace)
  name: backend-service
spec:
  forProvider:
    manifest:
      apiVersion: v1
      kind: Service
      metadata:
        labels:
          app.kubernetes.io/name: silly-demo
        name: silly-demo
        namespace: ($namespace)
      spec:
        ports:
        - name: http
          port: 8080
          protocol: TCP
          targetPort: 8080
        selector:
          app.kubernetes.io/name: silly-demo
        type: ClusterIP
  providerConfigRef:
    name: backend-app
