tests/backend/assert-replicas.yaml
---
apiVersion: devopstoolkit.live/v1beta1
kind: App
metadata:
  name: backend
spec:
  minReplicas: 2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 2
