tests/backend/assert-scaling-gateway-api.yaml
---
apiVersion: devopstoolkit.live/v1beta1
kind: App
metadata:
  name: backend
spec:
  routing: gateway-api
  minReplicas: 3
  maxReplicas: 8
  scaling:
    enabled: true
  crossplane:
    resourceRefs:
    - apiVersion: apps/v1
      kind: Deployment
      name: backend
    - apiVersion: gateway.networking.k8s.io/v1
      kind: HTTPRoute
      name: backend
    - apiVersion: keda.sh/v1alpha1
      kind: ScaledObject
      name: backend
    - apiVersion: v1
      kind: Service
      name: backend
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
spec:
  parentRefs:
  - name: contour
  hostnames:
  - silly-demo.54.204.223.4.nip.io
---
apiVersion: keda.sh/v1alpha1
kind: ScaledObject
metadata:
  name: backend
spec:
  scaleTargetRef:
    name: backend
  minReplicaCount: 3
  maxReplicaCount: 8
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
status:
  readyReplicas: 3
