tests/backend/assert-scaling-prometheus-zero-gateway-api.yaml
---
apiVersion: devopstoolkit.live/v1beta1
kind: App
metadata:
  name: backend
spec:
  (crossplane.resourceRefs[?name == 'backend' && kind == 'HTTPScaledObject']):
  - apiVersion: http.keda.sh/v1alpha1
    kind: HTTPScaledObject
    name: backend
---
apiVersion: http.keda.sh/v1alpha1
kind: HTTPScaledObject
metadata:
  name: backend
  labels:
    app.kubernetes.io/name: backend
  annotations:
    httpscaledobject.keda.sh/skip-scaledobject-creation: "true"
spec:
  hosts:
  - silly-demo.54.204.223.4.nip.io
  scaleTargetRef:
    name: backend
    service: backend
    port: 8080
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: backend
spec:
  parentRefs:
  - name: eg
    namespace: envoy-gateway-system
  hostnames:
  - silly-demo.54.204.223.4.nip.io
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: keda-add-ons-http-interceptor-proxy
      namespace: keda
      port: 8080
